# Golfcart_Push-Camera_Lidar

./: .gitignore  CMakeLists.txt  README.md  package.xml
bags/: where_bag.md
cfg/: GolfcartPush.cfg  HsvExample.cfg
launch/: hsv_example.launch  r3d3_model.launch  svc_bag.launch
rviz/: r3d3.rviz  svc.rviz
src/: HsvExample.cpp  HsvExample.hpp  camera_vision.cpp  camera_vision.hpp  camera_vision_node.cpp  hsv_example_node.cpp  lidar_filter.cpp  lidar_filter.hpp  lidar_filter_node.cpp  main_r3d3_joint_pub.cpp  r3d3JointPub.cpp  r3d3JointPub.hpp
urdf/: r3d3_gazebo.urdf.xacro  r3d3_visual.urdf.xacro
